--- a/src/index.scss
+++ b/src/index.scss
@@ -11,8 +11,7 @@ html {
 
 body {
   margin: 0;
-  // text-align: center;
-  color: black;
+  color: #464646;
   background-color: #fffafa;
   background-image: url('./bg-img.jpg');
 }
@@ -32,14 +31,12 @@ h6,
 p {
   margin: 0;
   padding: 0;
-  font-family: 'Grenze Gotisch', sans-serif;
 }
 
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  font-family: 'Grenze Gotisch', sans-serif;
 }
 
 a {
